syntax = "proto3";
package broker.mqtt.admin;
service MQTTBrokerAdminService {
    // cluster
    rpc cluster_status(ClusterStatusRequest) returns(ClusterStatusReply){}

    // user
    rpc mqtt_broker_create_user(CreateUserRequest) returns(CreateUserReply){}

    rpc mqtt_broker_delete_user(DeleteUserRequest) returns(DeleteUserReply){}

    rpc mqtt_broker_list_user(ListUserRequest) returns(ListUserReply){}

    rpc mqtt_broker_list_acl(ListAclRequest) returns(ListAclReply){}

    rpc mqtt_broker_create_acl(CreateAclRequest) returns(CreateAclReply){}

    rpc mqtt_broker_delete_acl(DeleteAclRequest) returns(DeleteAclReply){}

    // connection
    rpc mqtt_broker_list_connection(ListConnectionRequest) returns(ListConnectionReply){}

    // observability: slow-sub
    rpc mqtt_broker_enable_slow_subscribe(EnableSlowSubscribeRequest) returns(EnableSlowSubScribeReply) {}
}

// --------- cluster --------
message ClusterStatusRequest{

}
message ClusterStatusReply{
    string cluster_name = 1;
    repeated string nodes = 2;
}

// --------- user --------
message ListUserRequest{

}

message ListUserReply{
    repeated bytes users = 1;
}

message CreateUserRequest{
    string username = 1;

    string password = 2;

    bool is_superuser = 3;
}

message CreateUserReply{

}

message DeleteUserRequest{
    string username = 1;
}

message DeleteUserReply{

}

message ListAclRequest{
    string cluster_name = 1;
}

message ListAclReply{
    repeated bytes acls = 1;
}

message DeleteAclRequest{
    string cluster_name = 1;
    bytes acl = 2;
}

message DeleteAclReply{

}

message CreateAclRequest{
    string cluster_name = 1;
    bytes acl = 2;
}

message CreateAclReply{

}

// --------- connection --------
message ListConnectionRequest{

}

message ListConnectionReply{
    repeated ListConnectionRaw list_connection_raw = 1;
}

message ListConnectionRaw {
    uint64 connection_id = 1;
    string connection_type = 2;
    string protocol = 3;
    string source_addr = 4;
    string info = 5;
}


// --------- observability service --------
// --------- slow subscribe feature -------
message EnableSlowSubscribeRequest {
    bool is_enable = 1;
}

message EnableSlowSubScribeReply {
    bool is_enable = 1;
}
